--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<title>შავი ხვრელი</title>
-<link rel="icon" href="img/black-hole.png">
-<link rel="stylesheet" href="css/main.css">
 
-<nav>
-    <img class="saitis-logo" src="img/black-hole.png">
-    <ul>
-        <li>
-            <a href="index.html">მთავარი</a>
-            <a href="detalurad.html">დეტალურად</a>
-            <a href="kontaqti.html">კონტაქტი</a>
-        </li>
-    </ul>
-</nav>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <title>შავი ხვრელი</title>
+    <link rel="icon" href="img/black-hole.png">
+    <link rel="stylesheet" href="css/main.css">
+
+    <nav>
+        <img class="saitis-logo" src="img/black-hole.png">
+        <ul>
+            <li>
+                <a href="index.html">მთავარი</a>
+                <a href="detalurad.html">დეტალურად</a>
+                <a href="kontaqti.html">კონტაქტი</a>
+            </li>
+        </ul>
+    </nav>
+</head>
+
+<body>
+    <div class="misasalmebeli">
+        <div class="shavi-khvreli-mtavarze-div"><img class="shavi-khvreli-mtavarze"
+                src="img/Anatomy_of_a_Black_Hole.jpg"></div>
+        <div class="teqstsi-mtavarze-div">
+            <p class="satauri">საიტის შესახებ</p>
+            <br>
+            <br>
+            <p class="mtavari-teqsti">შავი ხვრელები წარმოადგენს ჩვენი სამყაროს ნაწილობრივ ამოუხსნელ ფენომენს, რომლის
+                არსებობაც დამტკიცებულია ყველა შესაძლო საშუალებით, თუმცა მისი ხასიათის ამოხსნა ამ ეტაპზე შეუძლებელია.
+                დიდი ალბათობით ეს არის ციური სხეული რომელიც ჩვენთვის ცნობილი 4 განზომილებიდან
+            <span class="italic">(სამი სივრცითი და ერთი დროის განზომილება)</span> არსებობს მხოლოდ სივრცით განზომილებებში. რაც
+            შეეხება მეოთხე, დროის განზომილებას, ის შავ ხვრელებში უბრალოდ არ არსებობს.</p>
+        </div>
+    </div>
+
+</body>
+
 </html>
