--- a/detalurad.html
+++ b/detalurad.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<title>შავი ხვრელი</title>
-<link rel="icon" href="img/black-hole.png">
-<link rel="stylesheet" href="css/main.css">
 
-<nav>
-    <img class="saitis-logo" src="img/black-hole.png">
-    <ul>
-        <li>
-            <a href="index.html">მთავარი</a>
-            <a href="detalurad.html">დეტალურად</a>
-            <a href="kontaqti.html">კონტაქტი</a>
-        </li>
-    </ul>
-</nav>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <title>შავი ხვრელი</title>
+    <link rel="icon" href="img/black-hole.png">
+    <link rel="stylesheet" href="css/main.css">
+
+    <nav>
+        <img class="saitis-logo" src="img/black-hole.png">
+        <ul>
+            <li>
+                <a href="index.html">მთავარი</a>
+                <a href="detalurad.html">დეტალურად</a>
+                <a href="kontaqti.html">კონტაქტი</a>
+            </li>
+        </ul>
+    </nav>
+</head>
+
+<body>
+    <div class="meore-pirveli">
+        <img class="namdvili_shavi_khvreli" src="img/Black_hole_-_Messier_87_crop_max_res.jpg">
+        <p>შავი ხვრელის პირველი რეალური სურათი გამოქვეყნდა 2019 წელს </p>
+    </div>
+    <div class="meore-meore">
+        <p>რას წარმოადგენს შავი ხვრელები</p>
+        <div class="video">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/nJ4d4QEDOYM?si=9l67tD8gL8cRM6gv" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </div>
+
+</body>
+
 </html>
