--- a/kontaqti.html
+++ b/kontaqti.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<title>შავი ხვრელი</title>
-<link rel="icon" href="img/black-hole.png">
-<link rel="stylesheet" href="css/main.css">
 
-<nav>
-    <img class="saitis-logo" src="img/black-hole.png">
-    <ul>
-        <li>
-            <a href="index.html">მთავარი</a>
-            <a href="detalurad.html">დეტალურად</a>
-            <a href="kontaqti.html">კონტაქტი</a>
-        </li>
-    </ul>
-</nav>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <title>შავი ხვრელი</title>
+    <link rel="icon" href="img/black-hole.png">
+    <link rel="stylesheet" href="css/main.css">
+
+    <nav>
+        <img class="saitis-logo" src="img/black-hole.png">
+        <ul>
+            <li>
+                <a href="index.html">მთავარი</a>
+                <a href="detalurad.html">დეტალურად</a>
+                <a href="kontaqti.html">კონტაქტი</a>
+            </li>
+        </ul>
+    </nav>
+</head>
+
+<body>
+    <div class="sakontaqto">
+        <div class="sakontaqto-teqsti">
+            <p>საკონტაქტო ინფორმაცია</p>
+            <p>ელ.ფოსტა:giorgi@zniepi.com</p>
+        </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d744.6574420852562!2d44.79991661738815!3d41.70692752842853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d7359d12355%3A0x63ee9d9ecd7bce6f!2z4YOR4YOY4YOW4YOc4YOU4YOhLeGDquGDlOGDnOGDouGDoOGDmCAi4YOb4YOd4YOW4YOQ4YOY4YOZ4YOQIiB8ICJNb3phaWthIiBCdXNpbmVzcyBDZW50cmU!5e0!3m2!1ska!2sge!4v1730712308692!5m2!1ska!2sge"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+</body>
+
 </html>
